# MarketMind-Intelligence

./: .gitignore  pyproject.toml
app/: config.py  main.py
app/services/: data_fetcher.py  metrics.py
